@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.51 2004/05/19 12:40:03 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.52 2004/05/20 21:16:56 zhen Exp $
+
+  20 May 2004; John Davis <zhen@gentoo.org> modules/livecd_stage2_target.py:
+  added support for blacklisting modules via hotplug in livecd-stage2. spec key
+  is livecd/modblacklist
 
   19 May 2004; John Davis <zhen@gentoo.org>
   livecd/runscript/default-runscript.sh, modules/livecd_stage2_target.py,
